# amphibious_uav_ugv

./: .gitignore  README.md  generate_build.sh  install_lib.sh
prerequisites_lib/communication_rely/communication_lib/: .gitignore  CMakeLists.txt  README.md  doxygen
prerequisites_lib/communication_rely/communication_lib/modules/: CMakeLists.txt
prerequisites_lib/communication_rely/communication_lib/modules/Qt_Util/: CMakeLists.txt  README.md
prerequisites_lib/communication_rely/communication_lib/modules/Qt_Util/include/: CRC.h  JsonConfig.h  MainThread.h
prerequisites_lib/communication_rely/communication_lib/modules/Qt_Util/source/: CRC.cpp  JsonConfig.cpp  MainThread.cpp
prerequisites_lib/communication_rely/communication_lib/modules/VCOMCOMM/: .gitattributes  CMakeLists.txt  README.md
prerequisites_lib/communication_rely/communication_lib/modules/VCOMCOMM/include/: VCOMCOMM.h
prerequisites_lib/communication_rely/communication_lib/modules/VCOMCOMM/source/: VCOMCOMM.cpp
prerequisites_lib/communication_rely/communication_lib/modules/loggerFactory/: CMakeLists.txt
prerequisites_lib/communication_rely/communication_lib/modules/loggerFactory/include/: BackTrace.h  QtCompatibilityLayer.h  spdlogger.h
prerequisites_lib/communication_rely/communication_lib/modules/loggerFactory/source/: BackTrace.cpp  spdUtil.cpp  spdlogger.cpp
prerequisites_lib/lidarsdk/Livox-SDK/: .gitignore
src/3DLidar/FAST_LIO/Log/: fast_lio_time_log.csv  mat_out.txt  mat_pre.txt  pos_log.txt
src/3DLidar/FAST_LIO/config/: avia.yaml
src/3DLidar/FAST_LIO/launch/: mapping_mid360_distributed.launch
src/3DLidar/FAST_LIO/src/: laserMapping.cpp
src/3DLidar/livox_ros_driver2/config/: MID360_config.json
src/3DLidar/livox_ros_driver2/launch/: msg_MID360.launch
src/system_bringup/: CMakeLists.txt  package.xml
src/system_bringup/config/move_base_config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner.yaml
src/system_bringup/launch/: bringup_all_system.launch  odom_bringup_.launch
src/system_bringup/launch/3d_uav_bringup/: system_bringup_uav_alone.launch  system_bringup_uav_without_odom.launch
src/system_bringup/launch/3d_ugv_bringup/: gmapping_lidar.launch  move_base_bringup.launch  pointcloud2laserscan.launch  system_bringup_ugv_alone.launch  system_bringup_ugv_without_odom.launch
src/system_bringup/rviz/: system_2d.rviz  system_3d.rviz
src/system_bringup/src/: receive_odom.cpp
src/uav_utils/control_tuner/launch/: control_tuner.launch
src/uav_utils/local_planner/launch/: local_planner_indoor.launch
src/uav_utils/local_planner/src/: pathFollower.cpp
src/uav_utils/vehicle_simulator/launch/: control_test_gazebo.launch  system_real_robot.launch
src/uav_utils/vehicle_simulator/rviz/: vehicle_simulator_airsim.rviz  vehicle_simulator_gazebo.rviz
src/uav_utils/waypoint_example/src/: waypointExample.cpp
src/uav_utils/waypoint_rviz_plugin/src/: waypoint_tool.cpp
src/ugv_utils/user_package/: CMakeLists.txt
src/ugv_utils/user_package/include/user_package/: control_chassis.h
src/ugv_utils/user_package/src/: control_chassis.cpp
